--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -24,11 +24,11 @@
     }
 
     @if $mode == round {
-        @return round($number * $n) / $n;
+        @return calc(round($number * $n) / $n);
     } @else if $mode == ceil {
         @return ceil($number * $n) / $n;
     } @else if $mode == floor {
-        @return floor($number * $n) / $n;
+        @return calc(floor($number * $n) / $n);
     } @else {
         @warn '#{ $mode } is undefined keyword.';
         @return $number;
@@ -44,7 +44,7 @@
 }
 
 @function to-rem($value) {
-    @return #{decimal-round(($value / 16), 3)}rem;
+    @return #{decimal-round(calc(($value / 16)), 3)}rem;
 }
 
 // Calculate percentual value related to the given area
